--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-<h1>Hello World!</h1>
-
+<app-navbar></app-navbar> <!--si je voulais 4 navbar: celle que j'ai créé ds le html navbar, j'ai juste à dupliquer cette ligne-->
 <router-outlet></router-outlet>
