4 - affichage plant + service

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary shadow"><!--j'ai ajouté shadow pr avoir mon ombre-->
+<nav class="navbar navbar-expand-lg bg-success shadow "><!--j'ai ajouté shadow pr avoir mon ombre, success me permet de changer la couleur -->
     <div class="container-fluid">        
-        <a class="navbar-brand" [routerLink]="['']">🪴 Plantdex</a>        
+        <a class="navbar-brand" [routerLink]="['']">🪴 Plantdex</a>              
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
