--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-success shadow "><!--j'ai ajouté shadow pr avoir mon ombre, success me permet de changer la couleur -->
+<nav class="navbar navbar-expand-lg bg-success shadow sticky-top"><!--j'ai ajouté shadow pr avoir mon ombre, success me permet de changer la couleur -->
     <div class="container-fluid">        
         <a class="navbar-brand" [routerLink]="['']">🪴 Plantdex</a>              
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
