--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,3 +1,3 @@
-<input class = "classe" type="text" placeholder="Rechercher" /> <!--(keyup)="onKey($event)" fournit ce que prdt l'event-->
+<input class = "classeSearchBar" type="text" placeholder="Rechercher" (input)="onKeySearchBar($event)" /> <!-- fournit ce que prdt l'event-->
 <!-- <p>{{ values }}</p> -->
 <p></p>
