stor-bar sans implementation

--- a/src/app/components/card-plant/card-plant.component.html
+++ b/src/app/components/card-plant/card-plant.component.html
@@ -3,6 +3,8 @@
     <div class="card-body">
         <h5 class="card-title text-truncate" [title]="plant.nom" >{{ plant.nom }}</h5> <!--text-truncate permet de cmettre des petits point si le nom est trop long, et le "[title]= permet d'afficher le nom de la plante qd tu passes ta souris"-->
         <p class="card-text">{{ plant.categorie }}</p>
+        <p class="card-textArrosage"> Arrosage: {{ plant.arrosage }}</p>
+        <p class="card-textEnsoleil"> Exposition: {{ plant.soleil }}</p>
         <a href="#" class="btn btn-success">Je l'ai</a>
     </div>
 </div>
