--- a/src/app/components/stor-bar/stor-bar.component.html
+++ b/src/app/components/stor-bar/stor-bar.component.html
@@ -1,1 +1,9 @@
-<p>stor-bar works!</p>
+<nav>
+
+<app-stor-bar
+(click)='boutonStor1'
+(click)='boutonStor2'
+(click)='boutonStor3'
+></app-stor-bar>
+
+</nav>
