--- a/src/app/pages/page-home/page-home.component.html
+++ b/src/app/pages/page-home/page-home.component.html
@@ -5,17 +5,26 @@
     (categoriesToFilter) = "onSelector($event)"
     ></app-filter-side-bar>
 
-    <div> 
-       
+    <div>
         <div class="divClass">
         <app-search-bar (eventSearchBar)="onSearch($event)" >Saisie recherche</app-search-bar>
+        </div>             
+            
+        <div class="mes3Clics">            
+            <label for="monTri">Trier par: </label>
+
+            <button id="boutonStor1Alpha" (click)='boutonStor1'>Ordre alpha</button>
+       
+            <button id="boutonStor2Arrosa" (click)='boutonStor2'>Arrosage</button>
+
+            <button id="boutonStor3Ensoleil" (click)='boutonStor3'>Ensoleillement</button>
         </div>
-        
-    <div class="container-plants p-4">
-        
+       
+        <div class="container-plants p-4">        
         <app-card-plant *ngFor="let plantData of plantsToDisplay" 
         [plant]="plantData"
         ></app-card-plant> <!--le lien de propriété, je donne le nom de plantData, c'est le nom de ma variable qui va parcourir mon tableau planttodysplay, -->
+        </div>
     </div>
-    </div>
+    
 </div>
