--- a/src/app/components/card-plant/card-plant.component.html
+++ b/src/app/components/card-plant/card-plant.component.html
@@ -1,5 +1,7 @@
-<div class="card" style="width: 18rem;">
+<div class="card" >
+    <div class="container-img-plant">
     <img class="card-img-top" [src]="plant.image" [alt]="plant.nom">
+    </div>
     <div class="card-body">
         <h5 class="card-title text-truncate" [title]="plant.nom" >{{ plant.nom }}</h5> <!--text-truncate permet de cmettre des petits point si le nom est trop long, et le "[title]= permet d'afficher le nom de la plante qd tu passes ta souris"-->
         <p class="card-text">{{ plant.categorie }}</p>
